--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -89,33 +89,38 @@ jobs:
         tag_name: v${{ steps.version.outputs.VERSION }}
         name: Seal Plus v${{ steps.version.outputs.VERSION }}
         body: |
-          ## 🚀 Seal Plus v1.2.7 - Redesigned UI & Enhanced Quality
+          ## 🚀 Seal Plus v1.2.8 - Enhanced Format Selection & Quality
           
-          ### ✨ Major UI Redesign
+          ### 🎥 Format Selection Screen Improvements
           
-          * **Fully Redesigned Home Page**
-            * **Modern Layout** - Cleaner, clutter-free interface with improved visual hierarchy
-            * **Refined Aesthetics** - Beautifully matched with premium Gradient Dark theming
-            * **Smoother Experience** - Optimized performance and smoother scrolling
+          * **Enhanced Format Filtering**
+            * **Valid URLs Only** - Now filters and shows only valid video/audio formats
+            * **Cleaner Interface** - Invalid or unavailable formats automatically hidden
+            * **Improved Reliability** - Better format validation before display
           
-          * **All-New Navigation Drawer**
-            * **Gradient Header** - Stunning theme-aware gradient backgrounds
-            * **Professional Branding** - Prominent app identity and version badge
-            * **Modern Styling** - Improved spacing, new icon styles, and elegant dividers
+          * **Maximum Quality Support**
+            * **Highest Resolution Downloads** - Support for maximum resolution available
+            * **No Quality Limits** - Download content at the best quality offered
+            * **Smart Quality Detection** - Automatically identifies highest quality
           
-          ### 🎥 Video Quality Upgrades
+          * **Video & Audio (High) Merged**
+            * **Best Quality Option** - New "video & audio (high)" merged format in videos section
+            * **Optimal Output** - Combines highest video quality with highest audio quality
+            * **Seamless Merging** - Automatic stream combination for best results
           
-          * **Advanced Stream Merging**
-            * **Best Quality Guarantee** - Automatically merges best video + best audio streams
-            * **Smart Format Selection** - "Suggested" option now ensures maximum resolution
-            * **High Quality Option** - Added high quality video or audio download in suggested section
+          ### 📥 Recent Downloads Section Updates
           
-          ### 🐛 Critical Fixes
+          * **UI/UX Improvements**
+            * **Delete Option Moved** - Now available in Downloads page for better organization
+            * **Fixed UI Issues** - Resolved layout problems and visual inconsistencies
+            * **Cleaner Design** - Streamlined interface for better experience
           
-          * **Homepage Delete Fix** - Resolved unresponsive delete button in home menu
-          * **Duplicate Cards Fix** - Fixed double entries in active/recent download lists
-          * **Crash Fixes** - Resolved NPE crash during item deletion
-          * **Stability Improvements** - Enhanced database reliability
+          ### 🐛 Bug Fixes
+          
+          * Fixed video info couldn't fetch error
+          * Improved format extraction reliability
+          * Better error handling for unavailable formats
+          * Enhanced performance and stability
           
           ---
           
